--- a/web_crawler/templates/web_crawler/crawling_result.html
+++ b/web_crawler/templates/web_crawler/crawling_result.html
@@ -1,22 +1,14 @@
-{% load staticfiles %}
+
 <html>
 <head>
-  <title> Django Test</title>
-{{from html import HTML
-
-h = HTML()
-h.p(crawling())
-print h
-
-def crawling(request):
-     driver = webdriver.Firefox()
-     driver.get('http://naver.com')
-
-     html_result = driver.page_source
-     return html_result
-     #soup = BeautifulSoup(html)
-     #prodList = soup.find_all("p", {"class": "prodPrice"})
-     #print(len(prodList))
-}}
+<title> Django Test </title>
 </head>
+<body>
+<div>
+  <h1>Django Test </h1>
+</div>
+<div>
+  <p>{{result}}
+</body>
 
+</html>
